--- a/index_o.html
+++ b/index_o.html
@@ -1,4 +1,7 @@
-<html lang="zxx" class="no-js"><head></head><body><h <meta="" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!DOCTYPE html>
+	<html lang="zxx" class="no-js">
+	<h
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="shortcut icon" href="img/fav.png">
 		<meta name="description" content="">
 		<meta charset="UTF-8">
@@ -12,11 +15,11 @@
 			<link rel="stylesheet" href="css/bootstrap.css">
 			<link rel="stylesheet" href="css/owl.carousel.css">
 			<link rel="stylesheet" href="css/main.css">
-
-
+		</head>
+		<body>
 
 			<!-- Start Header Area -->
-			<div id="undefined-sticky-wrapper" class="sticky-wrapper is-sticky" style="height: 96px;"><header class="default-header" style="width: 701px; position: fixed; top: 0px;">
+			<header class="default-header">
 				<div class="menutop-wrap">
 					<div class="menu-top container">
 						<div class="d-flex justify-content-between align-items-center">
@@ -30,19 +33,19 @@
 							<ul class="list">
 								<li><a href="https://cyphertree.com/"> <img src="">Cyphertree Technologies Pvt Ltd.</a></li>
 							</ul>
-
+							</ul>
 						</div>
 					</div>
 				</div>
 
-			</header></div>
+			</header>
 
 
 			<!-- start banner Area -->
 			<section class="banner-area relative" id="home">
 				<div class="overlay-bg overlay"></div>
 				<div class="container">
-					<div class="row fullscreen d-flex align-items-center justify-content-center" style="height: 798px;">
+					<div class="row fullscreen d-flex align-items-center justify-content-center">
 						<div class="banner-content col-lg-6 col-md-12">
 							<h1 class="text-uppercase">
 								Searching For Talent? <br>
@@ -70,10 +73,9 @@
 							<div class="title text-center">
 								<h1 class="mb-10">EASY AS 1,2,3</h1>
 								<p style="
-	    font-family: 'San Francisco', Helvetica, Arial, san-serif;
+	    font-family: Arial, Helvetica, sans-serif;
 	    color: #b9b6b6;
 			line-height: 32px;
-			font-size:20px;
 	">A simple technical hiring solution for companies to find technically sounds team with domain expertise.</p>
 							</div>
 						</div>
@@ -81,7 +83,7 @@
 					<div class="row">
 						<div class="col-lg-4">
 							<div class="single-service">
-							<span class="lnr lnr-select"></span>
+							<span class="lnr lnr-select"></span></span>
 								<h4 class="pt-60 pb-20">We Post
 The Job</h4>
 
@@ -90,7 +92,7 @@ The Job</h4>
 						<div class="col-lg-4">
 							<div class="single-service">
 							<span class="lnr lnr-chart-bars"></span>
-								<h4 class="pt-60 pb-20">We do the Assessment &amp; Tracking</h4>
+								<h4 class="pt-60 pb-20">We do the Assessment & Tracking</h4>
 
 							</div>
 						</div>
@@ -102,16 +104,16 @@ The Job</h4>
 							</div>
 						</div>
 					</div>
-					<br>
-						<br>
-							<br>
+					<BR>
+						<BR>
+							<BR>
 
 					<div class="row d-flex justify-content-center">
 						<button class="nw-btn primary-btn">GET STARTED<span class="lnr lnr-arrow-right"></span></button>
 					</div>
 				</div>
-
-
+				</div>
+				</div>
 			</section>
 
 			<section class="price-area section-gap" id="plan">
@@ -121,10 +123,9 @@ The Job</h4>
 							<div class="title text-center">
 								<h1 class="mb-10">We have technical expertise for following stack</h1>
 								<p style="
-								font-family: 'San Francisco', Helvetica, Arial, san-serif;
+								font-family: Arial, Helvetica, sans-serif;
 						    color: #b9b6b6;
 								line-height: 32px;
-								font-size:20px;
 	">Wour technical stack include all the latest technologies. The interviews are conducted by high level technical experts who provide data points for each candidate. Further assessment is done by coding challenge, specialised for each platforms.</p>
 </div>
 </div>
@@ -183,9 +184,8 @@ The Job</h4>
 					</div>
 
 					<div class="col-lg-3   text-center">
-						<img  src="img/lara.png" height="50">
-						</div>
-
+				<img  src="img/LARA.png" height="30">
+					</div>
 					<div class="col-lg-3   text-center">
 				<img  src="img/NODE.png" height="50">
 					</div>
@@ -217,7 +217,6 @@ The Job</h4>
 			</section>
 
 
-
 			<br>
 			<br>
 
@@ -226,7 +225,7 @@ The Job</h4>
 					<div class="row align-items-center">
 						<div class="col-lg-6 about-left">
 
-							<img src="img/j.png" height="225px" ,wdith="225px"></div>
+							<img src="img/j.png" height="120%" ,wdith="120%"></div>
 
 
 						<div class="col-lg-6 about-right">
@@ -235,10 +234,9 @@ The Job</h4>
 
 						   </h1>
 							 <p style="
-							 font-family: 'San Francisco', Helvetica, Arial, san-serif;
+							 font-family: Arial, Helvetica, sans-serif;
 							 color: #b9b6b6;
 							 line-height: 32px;
-							 font-size:20px;
 	">
 						 	  	Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						   </p>
@@ -302,12 +300,12 @@ The Job</h4>
 
 
 					</div>
+				</div>
+			</div>
 
 
-
-
-
-
+					</div>
+				</div>
 			</section>
 			<section class="related-area section-gap">
 				<div class="container">
@@ -316,10 +314,9 @@ The Job</h4>
 							<div class="title text-center">
 								<h1 class="mb-10">Our Services</h1>
 								<p style="
-								font-family: 'San Francisco', Helvetica, Arial, san-serif;
-								color: #b9b6b6;
+								font-family: Arial, Helvetica, sans-serif;
+						    color: #b9b6b6;
 								line-height: 32px;
-								font-size:20px;
 	">Who are in extremely love with eco friendly system.</p>
 							</div>
 						</div>
@@ -328,18 +325,17 @@ The Job</h4>
 						<div class="active-realated-carusel">
 							<div class="item row align-items-center">
 								<div class="col-lg-6 rel-right">
-									 <h1>
-										Job posting <br>
+								   <h1>
+								   	Job posting <br>
 
-									 </h1>
+								   </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;">
-		">
-											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-									 </p>
+ 									font-family: Arial, Helvetica, sans-serif;
+ 							    color: #b9b6b6;
+ 									line-height: 32px;
+ 		">
+								 	  	Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+								   </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
 								</div>
 								<div class="col-lg-6">
@@ -348,18 +344,17 @@ The Job</h4>
 							</div>
 							<div class="item row align-items-center">
 								<div class="col-lg-6 rel-left">
-									 <h1>
-										Screening <br>
+								   <h1>
+								   	Screening <br>
 
-									 </h1>
-									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-		">
-											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-									 </p>
+								   </h1>
+								   <p style="
+	 								font-family: Arial, Helvetica, sans-serif;
+	 						    color: #b9b6b6;
+	 								line-height: 32px;
+	 	">
+								 	  	Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+								   </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
 								</div>
 								<div class="col-lg-6">
@@ -373,11 +368,10 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size: 20px;
-		">
+ 									font-family: Arial, Helvetica, sans-serif;
+ 							    color: #b9b6b6;
+ 									line-height: 32px;
+ 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
@@ -393,17 +387,16 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-		">
+	 								font-family: Arial, Helvetica, sans-serif;
+	 						    color: #b9b6b6;
+	 								line-height: 32px;
+	 	">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
 								</div>
 								<div class="col-lg-6">
-									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
+									<img class="img-fluid" src="img/c1.jpg" alt="">
 								</div>
 							</div>
 							<div class="item row align-items-center">
@@ -413,17 +406,16 @@ The Job</h4>
 
 									 </h1>
 									 <p style="
-									font-family: 'San Francisco', Helvetica, Arial, san-serif;
-									color: #b9b6b6;
-									line-height: 32px;
-									font-size:20px;
-		">
+	 								font-family: Arial, Helvetica, sans-serif;
+	 						    color: #b9b6b6;
+	 								line-height: 32px;
+	 	">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
 								</div>
 								<div class="col-lg-6">
-									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
+									<img class="img-fluid" src="img/c1.jpg" alt="">
 								</div>
 							</div>
 							<div class="item row align-items-center">
@@ -438,7 +430,7 @@ The Job</h4>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
 								</div>
 								<div class="col-lg-6">
-									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
+									<img class="img-fluid" src="img/c1.jpg" alt="">
 								</div>
 							</div>
 
@@ -446,7 +438,6 @@ The Job</h4>
 					</div>
 				</div>
 			</section>
-
 
 <br>
 
@@ -469,7 +460,8 @@ The Job</h4>
     height: 135px;">
 							</a>
 							<a class="col single-img" href="#">
-								<img class="d-block mx-auto" src="img/l3.png" alt="" style="
+								<img class="d-block mx-auto" src="img/l3.png" alt=""
+								style="
     height: 135px;">
 							</a>
 
@@ -488,17 +480,11 @@ The Job</h4>
 						<div class="menu-content pb-30 col-lg-8">
 							<div class="title text-center">
 								<h1 class="mb-10">FIND YOUR NINJA</h1>
-								<p style="
-							 font-family: 'San Francisco', Helvetica, Arial, san-serif;
-							 color: #b9b6b6;
-							 line-height: 32px;
-							 font-size:20px
- ">
-			 Who are in extremely love with eco friendly system.</p>
+								<p>Who are in extremely love with eco friendly system.</p>
 							</div>
 						</div>
 					</div>
-					<form class="form-area mt-60" id="myForm" action="mail.php" method="post">
+					<form class="form-area mt-60" id="myForm" action="mail.php" method="post" class="contact-form text-right">
 						<div class="row">
 						<div class="col-lg-3 form-group">
 							<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
@@ -519,10 +505,10 @@ The Job</h4>
 							<button class="nw-btn primary-btn">Request a call back<span class="lnr lnr-arrow-right"></span></button>
 						</div>
 
-						</div></form></div>
+						</div></div>
+					</form>
 
-
-
+				</div>
 			</section>
 			<!-- end contact Area -->
 
@@ -533,7 +519,7 @@ The Job</h4>
 					<div class="row">
 						<br>
 						<div class="col-lg-3  col-md-12">
-	<img src="img\j.png" height="40px" >
+	<img src="img\j.png" height="20%", width="16%">
 							<div class="single-footer-widget">
 
 									<br>
@@ -545,11 +531,9 @@ Viman Nagar, Pune</a></li>
 								</ul>
 							</div>
 						</div>
-						<div class="col-lg-3  col-md-12">
+						<div class="col-lg-6  col-md-12">
 							<div class="single-footer-widget newsletter">
 								<br>
-<br>
-<br>
 
 
 								<h6>Contact:</h6>
@@ -568,18 +552,18 @@ Viman Nagar, Pune</a></li>
 											</div>
 
 											<div class="col-lg-3 col-md-12">
-
+												<br>
 												<button class="nw-btn primary-btn">Subscribe<span class="lnr lnr-arrow-right"></span></button>
 											</div>
 										</div>
 										<div class="info"></div>
 									</form>
 								</div>
-							</ul></div>
+							</div>
 						</div>
 
 					</div>
-			</div></footer>
+			</footer>
 			<!-- End footer Area -->
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
@@ -591,6 +575,5 @@ Viman Nagar, Pune</a></li>
 			<script src="js/jquery.magnific-popup.min.js"></script>
 			<script src="js/main.js"></script>
 
-
-
-</h></body></html>
+		</body>
+	</html>
