--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ The Job</h4>
 					</div>
 
 					<div class="col-lg-3   text-center">
-						<img  src="img/lara.png" height="50">
+						<img  src="img/lara0.png" height="50">
 						</div>
 
 					<div class="col-lg-3   text-center">
