VALUES OF ELEMENT

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ The Job</h4>
 					<div class="row justify-content-center">
 						<div class="active-realated-carusel">
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-right">
+								<div class="col-lg-6 rel-right" style="padding-bottom: 20px;">
 									 <h1>
 										Job posting <br>
 
@@ -347,7 +347,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
 									 <h1>
 										Screening <br>
 
@@ -367,7 +367,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
 									 <h1>
 										Technical interview <br>
 
@@ -387,7 +387,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
 									 <h1>
 										Coding Challenge<br>
 
@@ -407,7 +407,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
 									 <h1>
 										Video Interview <br>
 
@@ -427,7 +427,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
 									 <h1>
 									Background verification <br>
 
@@ -437,7 +437,7 @@ The Job</h4>
 									 </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
 								</div>
-								<div class="col-lg-6">
+								<div class="col-lg-6" style="padding-bottom: 20px;">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
 								</div>
 							</div>
@@ -560,7 +560,8 @@ Viman Nagar, Pune</a></li>
 									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
 
 										<div class="form-group row" style="width: 100%">
-											<div class="col-lg-8 col-md-12">
+											<div class="col-lg-8 col-md-12" style="
+	padding-bottom: 20px;">
 												<input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
 												<div style="position: absolute; left: -5000px;">
 													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
@@ -569,7 +570,7 @@ Viman Nagar, Pune</a></li>
 
 											<div class="col-lg-3 col-md-12">
 
-												<button class="nw-btn primary-btn">Subscribe<span class="lnr lnr-arrow-right"></span></button>
+												<button class="nw-btn primary-btn" > Subscribe<span class="lnr lnr-arrow-right"></span></button>
 											</div>
 										</div>
 										<div class="info"></div>
