--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ The Job</h4>
 								color: #b9b6b6;
 								line-height: 32px;
 								font-size:20px;
+								margin-bottom:15px;
 	">Who are in extremely love with eco friendly system.</p>
 							</div>
 						</div>
@@ -327,7 +328,7 @@ The Job</h4>
 					<div class="row justify-content-center">
 						<div class="active-realated-carusel">
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-right" style="padding-bottom: 20px;">
+								<div class="col-lg-6 rel-right" style="padding-bottom: 30px;">
 									 <h1>
 										Job posting <br>
 
@@ -336,8 +337,9 @@ The Job</h4>
 									font-family: 'San Francisco', Helvetica, Arial, san-serif;
 									color: #b9b6b6;
 									line-height: 32px;
-									font-size:20px;">
-		">
+									font-size:20px;
+									margin-bottom:15px;">
+
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
@@ -347,7 +349,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 30px;">
 									 <h1>
 										Screening <br>
 
@@ -357,6 +359,7 @@ The Job</h4>
 									color: #b9b6b6;
 									line-height: 32px;
 									font-size:20px;
+									margin-bottom:15px;
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -367,7 +370,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 30px;">
 									 <h1>
 										Technical interview <br>
 
@@ -377,6 +380,7 @@ The Job</h4>
 									color: #b9b6b6;
 									line-height: 32px;
 									font-size: 20px;
+									margin-bottom:15px;
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -387,7 +391,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 30px;">
 									 <h1>
 										Coding Challenge<br>
 
@@ -397,6 +401,7 @@ The Job</h4>
 									color: #b9b6b6;
 									line-height: 32px;
 									font-size:20px;
+									margin-bottom:15px;
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -407,7 +412,7 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 30px;">
 									 <h1>
 										Video Interview <br>
 
@@ -417,6 +422,8 @@ The Job</h4>
 									color: #b9b6b6;
 									line-height: 32px;
 									font-size:20px;
+									margin-bottom:15px;
+
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
@@ -427,17 +434,24 @@ The Job</h4>
 								</div>
 							</div>
 							<div class="item row align-items-center">
-								<div class="col-lg-6 rel-left" style="padding-bottom: 20px;">
+								<div class="col-lg-6 rel-left" style="padding-bottom: 30px;">
 									 <h1>
 									Background verification <br>
 
 									 </h1>
-									 <p class="pt-30 pb-30">
+									 <p style="
+									font-family: 'San Francisco', Helvetica, Arial, san-serif;
+									color: #b9b6b6;
+									line-height: 32px;
+									font-size:20px;
+									margin-bottom:15px;
+
+		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
 									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
 								</div>
-								<div class="col-lg-6" style="padding-bottom: 20px;">
+								<div class="col-lg-6" style="padding-bottom: 30px;">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
 								</div>
 							</div>
@@ -562,6 +576,7 @@ Viman Nagar, Pune</a></li>
 										<div class="form-group row" style="width: 100%">
 											<div class="col-lg-8 col-md-12" style="
 	padding-bottom: 20px;">
+	<br>
 												<input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
 												<div style="position: absolute; left: -5000px;">
 													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
