--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 				<div class="overlay-bg overlay"></div>
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-center" style="height: 798px;">
-						<div class="banner-content col-lg-6 col-md-12">
+						<div class="banner-content col-lg-6 col-md-12" style="position: relative;
+    left: 14px;">
+
 							<h1 class="text-uppercase">
 								Searching For Talent? <br>
 
@@ -54,8 +56,10 @@
 							</p>
 							<a href="#" class="primary-btn2 header-btn text-uppercase">HIRING</a>
 						</div>
-						<div class="col-lg-6">
-							<img class="img-fluid" src="img/header-img.png" alt="">
+						<div class="col-lg-6" style="position: relative;
+    left: 14px;">
+							<img class="img-fluid" src="img/header-img.png" alt="" style="position: relative;
+	    left: 14px;">
 						</div>
 					</div>
 				</div>
@@ -161,11 +165,11 @@ The Job</h4>
 
 				<div class="item row align-items-center">
 					<div class="col-lg-3 text-center">
-				<img  src="img/anroid.png" height="50">
+				<img  src="img/AN.png" height="65">
 					</div>
 
 					<div class="col-lg-3   text-center">
-					<img  src="img/react.png" height="50">
+					<img  src="img/react.png" height="65">
 					</div>
 					<div class="col-lg-3   text-center">
 				<img  src="img/JANGO.png" height="50">
@@ -179,7 +183,7 @@ The Job</h4>
 				</div>
 				<div class="item row align-items-center">
 					<div class="col-lg-3   text-center">
-					<img  src="img/A.png" height="50">
+					<img  src="img/A.png" height="65">
 					</div>
 
 					<div class="col-lg-3   text-center">
@@ -191,7 +195,7 @@ The Job</h4>
 					</div>
 
 					<div class="col-lg-3   text-center">
-				<img  src="img/react.png" height="50">
+				<img  src="img/react.png" height="70">
 					</div>
 
 
@@ -242,7 +246,7 @@ The Job</h4>
 	">
 						 	  	Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						   </p>
-							<a href="#" class="primary-btn2 header-btn text-uppercase">See Details</a>
+									<button class="nw-btn primary-btn" > see Details<span class="lnr lnr-arrow-right"></span></button>
 						</div>
 					</div>
 				</div>
@@ -279,7 +283,7 @@ The Job</h4>
 
 								<div class="bottom-sec">
 									<p>
-									 successful hiring
+									 Successful Hiring
 									</p>
 								</div>
 
@@ -342,7 +346,8 @@ The Job</h4>
 
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
-									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
+
+									<button class="nw-btn primary-btn" > Research Details<span class="lnr lnr-arrow-right"></span></button>
 								</div>
 								<div class="col-lg-6">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
@@ -363,7 +368,7 @@ The Job</h4>
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
-									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
+									<button class="nw-btn primary-btn" > Research Details<span class="lnr lnr-arrow-right"></span></button>
 								</div>
 								<div class="col-lg-6">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
@@ -384,7 +389,7 @@ The Job</h4>
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
-									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
+								<button class="nw-btn primary-btn" > Research Details<span class="lnr lnr-arrow-right"></span></button>
 								</div>
 								<div class="col-lg-6">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
@@ -405,7 +410,7 @@ The Job</h4>
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
-									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
+									<button class="nw-btn primary-btn" > Research Details<span class="lnr lnr-arrow-right"></span></button>
 								</div>
 								<div class="col-lg-6">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
@@ -427,7 +432,7 @@ The Job</h4>
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
-									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
+									<button class="nw-btn primary-btn" > Research Details<span class="lnr lnr-arrow-right"></span></button>
 								</div>
 								<div class="col-lg-6">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
@@ -449,7 +454,7 @@ The Job</h4>
 		">
 											Who are in extremely love with eco friendly system. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 									 </p>
-									<a href="#" class="primary-btn2 header-btn text-uppercase">Research Details</a>
+							<button class="nw-btn primary-btn" > Research Details<span class="lnr lnr-arrow-right"></span></button>
 								</div>
 								<div class="col-lg-6" style="padding-bottom: 30px;">
 									<img class="img-fluid width-100" src="img/c1.jpg" alt="">
@@ -464,34 +469,34 @@ The Job</h4>
 
 <br>
 
-			<section class="brand-area">
+<section class="brand-area">
 
-						<div class="row d-flex justify-content-center">
-							<div class="menu-content pb-60 col-lg-12">
-								<div class="title text-center">
-									<h1 class="mb-10">We Have Worked With Some Great Companies</h1>
-									<br>
-									<br>
-					<div class="row logo-wrap">
-							<a class="col single-img" href="#">
-								<img class="d-block mx-auto" src="img/l1.png" alt="" style="
-    height: 135px;
+			<div class="row d-flex justify-content-center">
+				<div class="menu-content pb-60 col-lg-12">
+					<div class="title text-center">
+						<h1 class="mb-10">We Have Worked With Some Great Companies</h1>
+						<br>
+						<br>
+		<div class="row logo-wrap">
+				<a class="col single-img" href="#">
+					<img class="d-block mx-auto" src="img/l1.png" alt="" style="
+height: 135px;
 ">
-							</a>
-							<a class="col single-img" href="#">
-								<img class="d-block mx-auto" src="img/l2.png" alt="" style="
-    height: 135px;">
-							</a>
-							<a class="col single-img" href="#">
-								<img class="d-block mx-auto" src="img/l3.png" alt="" style="
-    height: 135px;">
-							</a>
+				</a>
+				<a class="col single-img" href="#">
+					<img class="d-block mx-auto" src="img/l2.png" alt="" style="
+height: 160px;">
+				</a>
+				<a class="col single-img" href="#">
+					<img class="d-block mx-auto" src="img/l3.png" alt="" style="
+height: 135px;">
+				</a>
 
-					</div>
-				</div>
-			</div>
 		</div>
-			</section>
+	</div>
+</div>
+</div>
+</section>
 
 
 
@@ -535,7 +540,8 @@ The Job</h4>
 
 						</div></form></div>
 
-
+<br>
+<br>
 
 			</section>
 			<!-- end contact Area -->
@@ -544,48 +550,79 @@ The Job</h4>
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 				<div class="container">
+<div class="row">
+	<div class="col-md-4">
+		<img src="img\j.png" height="40px" >
+								<div class="single-footer-widget">
+										<br>
+									<h6> Cyphertree Technologies Pvt Ltd.
+												Office:</h6>
+									<ul class="footer-nav">
+										<li><a href="#">307/308, Lunkad Sky Max
+												Viman Nagar, Pune</a></li>
+									</ul>
+								</div>
+	</div>
+	<div class="col-md-4">
+		<br>
+		<br>
+		<br>
+		<h6>Contact:</h6>
+		<ul class="footer-nav">
+			<li> <a href="#"> sales@cyphertree.com <br> +91 7252824179</a></li>
+		</ul>
+
+		<div id="mc_embed_signup">
+			<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
+
+				<div class="form-group row" style="width: 100%">
+
+						<button class="nw-btn primary-btn" > General Enquiries<span class="lnr lnr-arrow-right"></span></button>
+						<div style="position: absolute; left: -5000px;">
+							<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+						</div>
+					</div>
+					</div>
+
+
+	</div>
+	<div class="col-lg-4 text-center">
+		<div>
+	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/ash.jpg" alt="Asihwariya">
+		</div>
+
+		<div>
+				<button class="nw-btn primary-btn" > Let's Talk<span class="lnr lnr-arrow-right"></span></button>
+		</div>
+
+	</div>
+</div>
+
+
+
+
 					<div class="row">
 						<br>
-						<div class="col-lg-3  col-md-12">
-	<img src="img\j.png" height="40px" >
-							<div class="single-footer-widget">
+						<div class="col-md-3">
 
-									<br>
-								<h6> Cyphertree Technologies Pvt Ltd.
-Office:</h6>
-								<ul class="footer-nav">
-									<li><a href="#">307/308, Lunkad Sky Max
-Viman Nagar, Pune</a></li>
-								</ul>
-							</div>
 						</div>
-						<div class="col-lg-3  col-md-12">
+						<div class="col-md-3 ">
 							<div class="single-footer-widget newsletter">
 								<br>
 <br>
 <br>
 
 
-								<h6>Contact:</h6>
-								<ul class="footer-nav">
-									<li> <a href="#"> sales@cyphertree.com <br> +91 7252824179</a></li>
 
-								<div id="mc_embed_signup">
-									<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
 
-										<div class="form-group row" style="width: 100%">
-											<div class="col-lg-8 col-md-12" style="
-	padding-bottom: 20px;">
-	<br>
-												<input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-												<div style="position: absolute; left: -5000px;">
-													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-												</div>
+
 											</div>
+<div class="col-md-3">
 
-											<div class="col-lg-3 col-md-12">
+</div>
+											<div class="col-md-3 ">
 
-												<button class="nw-btn primary-btn" > Subscribe<span class="lnr lnr-arrow-right"></span></button>
+
 											</div>
 										</div>
 										<div class="info"></div>
@@ -593,6 +630,17 @@ Viman Nagar, Pune</a></li>
 								</div>
 							</ul></div>
 						</div>
+
+					</div>
+					<div class="row"><span class="col-12 col-md-4 mb-5 mb-md-0 social-media"><a href="https://wwww.instagram.com" class="social-media"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" size="24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+						<path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
+						</path></svg>
+					</a>
+					<a href="https://wwww.instagram.com" class="social-media"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" size="24" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg></a>
+					<a href="https://wwww.instagram.com" class="social-media"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" size="24" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg>
+					</a><a href="https://wwww.instagram.com" class="social-media"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" size="24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+						<path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg></a></span>
+						<span class="col-md-2"></span><span class="col-md-4 d-md-flex justify-content-end copyright">©2019 Cyphertree Private Limited </span><a aria-current="page" class="col-md-2 d-md-flex justify-content-center privacy" href="/">Privacy Policy</div></div>
 
 					</div>
 			</div></footer>
