--- a/index.html
+++ b/index.html
@@ -566,12 +566,12 @@ height: 135px;">
 	<div class="col-md-4">
 		<br>
 		<br>
-		<br>
 		<h6>Contact:</h6>
 		<ul class="footer-nav">
 			<li> <a href="#"> sales@cyphertree.com <br> +91 7252824179</a></li>
 		</ul>
-
+<br>
+<br>
 		<div id="mc_embed_signup">
 			<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
 
@@ -588,9 +588,9 @@ height: 135px;">
 	</div>
 	<div class="col-lg-4 text-center">
 		<div>
-	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/ash.jpg" alt="Asihwariya">
+	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/ash0.jpg" alt="Asihwariya">
 		</div>
-
+<h6> Aishwarya Singh </h6>
 		<div>
 				<button class="nw-btn primary-btn" > Let's Talk<span class="lnr lnr-arrow-right"></span></button>
 		</div>
@@ -632,7 +632,7 @@ height: 135px;">
 						</div>
 
 					</div>
-					<div class="row width=200px">
+					<div class="row">
 						<span class="col-12 col-md-4 mb-5 mb-md-0 social-media"><a href="https://wwww.instagram.com" class="social-media"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" size="24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
 						<path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
 						</path></svg>
