--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ height: 135px;">
 	</div>
 	<div class="col-lg-4 text-center">
 		<div>
-	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/ash0.jpg" alt="Asihwariya">
+	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/AS.jpg" alt="Asihwariya">
 		</div>
 <h6> Aishwarya Singh </h6>
 		<div>
