--- a/index.html
+++ b/index.html
@@ -588,10 +588,11 @@ height: 135px;">
 	</div>
 	<div class="col-lg-4 text-center">
 		<div>
-	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/AS.jpg" alt="Asihwariya">
+	<img class="rounded-circle img-fluid sp-image ml-md-2 mb-md-4" src="img/AS.JPG" alt="Asihwariya">
 		</div>
 <h6> Aishwarya Singh </h6>
 		<div>
+			<BR>
 				<button class="nw-btn primary-btn" > Let's Talk<span class="lnr lnr-arrow-right"></span></button>
 		</div>
 
